# btag-training-preprocessing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  makeroccurve.py  makeroccurves.py  run.sh  setup.sh
BTagTrainingPreprocessing/: CMakeLists.txt
BTagTrainingPreprocessing/src/: BTagJetWriter.cxx  BTagJetWriter.hh  BTagJetWriterConfig.hh  BTagTrackWriter.cxx  BTagTrackWriter.hh  BTagTrackWriterConfig.hh  BTagWriterConfig.hh  FlavorTaggingVariables.cxx  FlavorTaggingVariables.h  HDF5Defs.cxx  HDF5Defs.hh  HDF5Writer.cxx  HDF5Writer.hh  HDF5WriterAbstraction.cxx  HDF5WriterAbstraction.hh  Jet.cxx  Jet.hh  SomeTool.cxx  SomeTool.h  Track.hh
BTagTrainingPreprocessing/utils/: dump-test.cxx
IOTests/: CMakeLists.txt
IOTests/utils/: caloTrackReader.cxx  dump-test.cxx
